# c-compiler-lib

./: .gitmodules  CMakeLists.txt  C_compiler.cpp  C_compiler.hpp  README.md  compiler.cpp  compiler.hpp  generate_IR.cpp  generate_IR.hpp  handle_args.cpp  handle_args.hpp  lexer.cpp  lexer.hpp  load_file.cpp  load_file.hpp  main.cpp  optimize_AST.cpp  optimize_AST.hpp  optimize_IR.cpp  optimize_IR.hpp  parser.cpp  parser.hpp  preprocessor.cpp  preprocessor.hpp  print_AST.cpp  print_AST.hpp  print_IR.cpp  print_IR.hpp  remove_sub_expressions.cpp  remove_sub_expressions.hpp  save_file.cpp  save_file.hpp
examples/IR_only/: CMakeLists.txt  main.cpp
examples/x86_backend/: CMakeLists.txt  assembly_generation.hpp  main.cpp
include/: stdbool.h  stddef.h  stdint.h  stdlib.h  string.h
parser/: AST_iterator.cpp  AST_iterator.hpp  AST_node.hpp  array.cpp  array.hpp  binary_operator.cpp  binary_operator.hpp  break.cpp  break.hpp  compound_statement.cpp  compound_statement.hpp  constant.cpp  constant.hpp  continue.cpp  continue.hpp  data_type.cpp  data_type.hpp  declaration.cpp  declaration.hpp  do_while_loop.cpp  do_while_loop.hpp  expression.cpp  expression.hpp  for_loop.cpp  for_loop.hpp  function.cpp  function.hpp  function_call.cpp  function_call.hpp  function_declaration.cpp  function_declaration.hpp  goto.cpp  goto.hpp  if_conditional.cpp  if_conditional.hpp  label.cpp  label.hpp  parse_error.cpp  parse_error.hpp  pointer.cpp  (+35 more)
tests/: main.c  plain_return.c  sandbox.c  stress_test.py
